--- a/styles/style.css
+++ b/styles/style.css
@@ -372,6 +372,7 @@ nav ul li a {
 .attractions__product img {
   max-width: 90%;
   border-radius: var(--border-radius-8);
+  min-height:316px;
 }
 
 .attraction__name {
