--- a/styles/root.css
+++ b/styles/root.css
@@ -66,6 +66,8 @@
     --spacing-8: 8px;
     --spacing-80: 80px;
     --spacing-96: 96px;
+
+    --typeface-weight-semibold: 600;
     --typeface-size-2xl: 36px;
     --typeface-size-3xl: 48px;
     --typeface-size-4xl: 60px;
